fix line wrapping for the phone number& add link to call the phone

--- a/scss/blocks/_block_3.1_media.scss
+++ b/scss/blocks/_block_3.1_media.scss
@@ -27,7 +27,10 @@
         margin-right: auto;
         margin-left: auto;
         text-align: center;
-        // border: 1px solid white;
+
+        a {
+            display: inline-block;
+        }
     }
     
     .info-block-btn_white {
